monitoring/prometheus/prometheus-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: monitor
spec:
  selector:
    prometheus: prometheus-persistant
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: web
