monitoring/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-external
  namespace: monitor
status:
  loadBalancer:
    ingress:
      - ip: 10.0.1.200
      - ip: 10.0.1.201
      - ip: 10.0.1.202
      - ip: 10.0.1.203
spec:
  rules:
    - host: prom.kube
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-external
                port:
                  number: 9090
